force-app/main/default/objects/Integration_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message encountered.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>