force-app/main/default/objects/Integration_Log__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>Event or Record Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>