force-app/main/default/objects/Integration_Log__c/fields/Message_Body__c.field-meta.xml
<CustomField>
    <fullName>Message_Body__c</fullName>
    <description>The body of the message</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Message Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>