force-app/main/default/objects/Integration_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Timestamp of event</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>